<resources>
    <string name="app_name">Moodie</string>
    <string name="button_addDiary">Add Diary</string>
    <string name="hint_diaryDescription">Description</string>
    <string name="menu_addDiary">Add</string>
    <string name="menu_cancelDiary">Cancel</string>
    <string name="toast_message">Please enter the description of your day</string>
    <string name="button_saveDiary">Save Diary</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_diary_image">Select Diary Image</string>
    <string name="button_changeImage">Change Image</string>
    <string name="smilingFaceDesc">smiling face</string>
    <string name="neutralFaceDesc">neutral face</string>
    <string name="sadFaceDesc">sad face</string>
    <string name="angryFaceDesc">angryFace</string>
    <string name="diaryImageDesc">diary image</string>
    <string name="textview_yourMood">Your Mood:</string>
    <string name="menu_deleteDiary">Delete</string>
    <string name="moodDesc">Your Mood</string>
    <string name="button_takephoto">Take Photo</string>
    <string name="welcomeDesc">Welcome Image</string>
    <string name="welcomeText">Welcome to Moodie!</string>
    <string name="hint_diaryTitle">If this was blank, today\'s date will be the title.</string>
    <string name="menu_pie">Pie</string>
</resources>
