<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@android:color/black"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/diaryDescription"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_diaryDescription"
                        android:inputType="text"
                        android:maxLength="250"
                        android:maxLines="5"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:gravity="top|start"/>

                <TextView
                        android:text="@string/textview_yourMood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/yourMood"
                        android:padding="8dp" android:textSize="24sp" android:layout_margin="8dp"
                        android:textColor="@color/colorPrimaryDark"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_margin="8dp" android:padding="8dp">
                    <ImageView
                            android:layout_width="wrap_content"
                            app:srcCompat="@drawable/smiling"
                            android:id="@+id/smilingFace" android:layout_weight="1"
                            android:layout_height="@android:dimen/notification_large_icon_height"
                            android:contentDescription="@string/smilingFaceDesc"
                            android:alpha="0.5"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" app:srcCompat="@drawable/neutral"
                            android:id="@+id/neutralFace" android:layout_weight="1"
                            android:contentDescription="@string/neutralFaceDesc"
                            android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
                            android:alpha="0.5"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" app:srcCompat="@drawable/sad"
                            android:id="@+id/sadFace" android:layout_weight="1"
                            android:contentDescription="@string/sadFaceDesc"
                            android:alpha="0.5"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" app:srcCompat="@drawable/angry"
                            android:id="@+id/angryFace" android:layout_weight="1"
                            android:contentDescription="@string/angryFaceDesc" android:layout_marginStart="5dp"
                            android:alpha="0.5"/>
                </LinearLayout>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/diaryImage"
                            android:layout_width="165dp"
                            app:srcCompat="@mipmap/ic_launcher" android:layout_height="165dp"
                            android:contentDescription="@string/diaryImageDesc"
                            android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                            />
                    <Button
                            android:id="@+id/takePhoto"
                            android:text="@string/button_takephoto"
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/diaryImage" android:layout_marginStart="8dp"
                            app:layout_constraintHorizontal_bias="1.0"/>
                    <Button
                            android:id="@+id/chooseImage"
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/button_addImage"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@+id/diaryImage" android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/takePhoto"
                    />
                    <Button
                            android:id="@+id/btnAdd"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:stateListAnimator="@null"
                            android:text="@string/button_addDiary"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/diaryImage" android:layout_marginStart="8dp"
                            android:layout_width="175dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>
                </android.support.constraint.ConstraintLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>